@@ -14,6 +14,10 @@ next
     of only responding to ClientMessages asking for fullscreen mode
     *after* the window has been mapped).
 
+  [Changed]
+  - y offset and height taken into account when sorting monitors, the
+    same way lemonbar sorts monitors.
+
 v16.01  2016-01-08
   [Fixed]
   - A bar will now be notified when a different monitor has been
